# erfinv_cpp

./: .gitignore  LICENSE  README.md  environment.yml  erfinv.hpp  meson.build
.github/workflows/: ci.yml
benchmark/: main.cpp
test/: test.cpp
verification/: main.cpp  plot.py
